add fetching book by isbn, refactoring
