# bookshelf-server/src/main/java/de/birgitkratz/bookshelfserver/BookshelfController.java
@@ -12,7 +12,6 @@ import de.birgitkratz.bookshelf.model.Book;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -35,6 +34,24 @@ public class BookshelfController implements BooksApi {
     public ResponseEntity<List<Book>> fetchAllBooks() {
         LOGGER.info("Received request to fetch all books");
         final var books = new ArrayList<>(bookshelf.values());
+        if (books.isEmpty()) {
+            LOGGER.info("No books in shelf");
+            return ResponseEntity.noContent().build();
+        }
+        LOGGER.info("Returning {} books", books.size());
         return ResponseEntity.ok(books);
+    }
+
+    @Override
+    public ResponseEntity<Book> fetchByIsbn(final String isbn) {
+        LOGGER.info("Received request to fetch book by isbn {}", isbn);
+        final var book = bookshelf.get(isbn);
+
+        if (book == null) {
+            LOGGER.info("No book found");
+            return ResponseEntity.noContent().build();
+        }
+        LOGGER.info("Found it!");
+        return ResponseEntity.ok(book);
     }
 }
